--- a/firewalld.service.d/override.conf
+++ b/firewalld.service.d/override.conf
@@ -1,4 +1,9 @@
 [Service]
-CapabilityBoundingSet=~CAP_LINUX_IMMUTABLE
+CapabilityBoundingSet=~CAP_LINUX_IMMUTABLE CAP_SYS_CHROOT
 ProtectHome=yes
-SystemCallFilter=~@cpu-emulation @obsolete
+ProtectControlGroups=yes
+ProtectKernelLogs=yes
+ProtectHostname=yes
+LockPersonality=yes
+SystemCallFilter=~@cpu-emulation @obsolete @swap @mount @debug
+SystemCallArchitectures=native
