--- a/thermald.service.d/override.conf
+++ b/thermald.service.d/override.conf
@@ -1,10 +1,11 @@
 [Service]
 CapabilityBoundingSet=~CAP_LINUX_IMMUTABLE
 ProtectHome=yes
+ProtectControlGroups=yes
 ProtectKernelLogs=yes
 ProtectHostname=yes
 ProtectClock=yes
 LockPersonality=yes
-SystemCallFilter=~@clock @cpu-emulation @obsolete
+SystemCallFilter=~@clock @cpu-emulation @obsolete @mount @debug @swap
 SystemCallArchitectures=native
 IPAddressDeny=any
