--- a/alsa-state-service.d/override.conf
+++ b/alsa-state-service.d/override.conf
@@ -1,7 +1,13 @@
 [Service]
 CapabilityBoundingSet=~CAP_LINUX_IMMUTABLE CAP_NET_ADMIN
 ProtectHome=yes
+ProtectKernelLogs=yes
+ProtectControlGroups=yes
 ProtectHostname=yes
 ProtectClock=yes
-SystemCallFilter=~@cpu-emulation @obsolete
+PrivateUsers=yes
+RestrictNamespaces=~net uts mnt
+LockPersonality=yes
+SystemCallFilter=~@clock @cpu-emulation @obsolete @swap @mount @debug
 SystemCallArchitectures=native
+IPAddressDeny=any
