--- a/NetworkManager-wait-online.service.d/override.conf
+++ b/NetworkManager-wait-online.service.d/override.conf
@@ -1,5 +1,5 @@
 [Service]
 CapabilityBoundingSet=~CAP_LINUX_IMMUTABLE
 ProtectHome=yes
-SystemCallFilter=~@cpu-emulation @mount @obsolete @swap
+SystemCallFilter=~@cpu-emulation @debug @mount @obsolete @swap
 SystemCallArchitectures=native
