Add LockPersonality to wpa_supplicant

--- a/wpa_supplicant.service.d/override.conf
+++ b/wpa_supplicant.service.d/override.conf
@@ -1,5 +1,6 @@
 [Service]
 CapabilityBoundingSet=~CAP_LINUX_IMMUTABLE
 ProtectHome=yes
+LockPersonality=yes
 SystemCallFilter=~@cpu-emulation @obsolete
 SystemCallArchitectures=native
