--- a/NetworkManager.service.d/override.conf
+++ b/NetworkManager.service.d/override.conf
@@ -1,3 +1,3 @@
 [Service]
-SystemCallFilter=~@cpu-emulation @obsolete
+SystemCallFilter=~@cpu-emulation @debug @obsolete
 SystemCallArchitectures=native
